# Algorithm

./: .gitignore  README.md
CardPick/: CMakeLists.txt
CardPick/src/: card_pick.cpp  main.cpp
Kmp/: CMakeLists.txt
Kmp/src/: kmp.cpp  main.cpp
Manacher/: CMakeLists.txt
Manacher/src/: main.cpp  manacher.cpp
QuikSort/: CMakeLists.txt
QuikSort/src/: main.cpp  quik_sort.cpp
